css/styles.css
/* styles.css 
   Project: 
   Author: 
   Date: 
	
   Helpful links: 
   	Web colors: 
   		https://en.wikipedia.org/wiki/Web_colors#X11_color_names
	Color picker tool:
		https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Colors/Color_picker_tool
		http://colorpicker.com

*/

/*@import url('https://fonts.googleapis.com/css2?family=Lato&family=Montserrat&family=Open+Sans&family=Roboto&display=swap');
*/
* {
  box-sizing: border-box;
}

img {
  width: 100%;
  display: block;
}

body, html {
  font-family: 'Lato', sans-serif; 
}

body {
  background-color: #9b4741 ;
}

.maintext > h1, .maintext > h2, .maintext > h3, .pullquote {
  color: #9b4741;
  font-family: 'Open Sans', sans-serif;

}

header {
  width: 100%;
  /*position: sticky;*/
  top: 0;
  width: 100%;
  height: 100%;
  /*max-height: 600px;*/
  
}

header img {
  /* this opacity makes the header image dark so you can read the headline text more easily. remove the opacity if you do not have your headline on top of the image.*/
  opacity: 0.6;
}

header picture {
  width: 100%;
}

header picture img{
  position: absolute;
  height: 100vh;
  width: auto;
  opacity: 1;
  z-index: -10;
}

.title1 {
  width: 100%;
  color: white;
  text-align: center;
  padding: 3%;
}

.title1 h1 {
  font-size: 5.1em;
  margin-bottom: -4px;
}

.title1 h2 {
  font-size: 2em;
}

.title1 h3 {
  margin-top: 10%;
  font-size: 1.2em;
  font-style: italic;
}

.title2 {
  width: 100%;
  color: darkslategray;
  text-align: center;
  padding: 3% 10%;
}

.title2 h1 {
  font-size: 4.7em;
  margin-bottom: -4px;
}

.title2 h2 {
  font-size: 2em;
}

.title2 h3 {
  margin-top: 10%;
  margin-bottom: 0;
  font-size: 1.1em;
  font-style: italic;
}

.content {
  width: 100%;
  background-color: white;
  overflow-x: hidden;
}

.maintext {
  max-width: 640px;
  margin: auto;
  color: darkslategray;
  font-size: 1.2em;
  line-height: 1.7em;
  text-align: justify;
/*  font-size: 1.4em;
  font-weight: 300;
  line-height: 1.8em*/;
  padding: 1%;
}

.pullquote {
  /*width: 50%;*/
  font-size: 1.4em;
  line-height: 1.6em;
  font-style: italic;
  text-align: left;
}

.name {
  font-size: 0.7em;
  text-align: center;
  line-height: 0.1em;
  padding-bottom: 30px;
}

.left {
  float: left;
  padding-right: 20px;
  margin-left: -40px;
}

.right {
  float: right;
  padding-left: 20px;
  margin-right: -40px;
}

.sectionhead {
  text-align: center;
  color: darkslategray;
}

.bigphoto {
  position: relative;
  height: 530px;
}

.bigphoto img {
  object-fit: cover;
  height: 100%;
}

.photocaption {
  position: absolute;
  bottom: 0px;
  width: 100%;
  padding-left: 1%;
  color: white;
  background-color: rgba(0,0,0,0.4);
}

.photogrid {
  display: grid;
  grid-template-columns: auto auto auto;
  grid-gap: 0.5em;
}

.gridpic {
  position: relative;
}

.gridpic .photocaption {
  display: none;
}

.cycle-slideshow {
  max-width: 700px;
  margin: auto;
}

.knightlab {
  max-width: 700px;
  margin: auto;
}

.googlemap {
  overflow:hidden;
  padding-bottom:56.25%;
  position:relative;
  height:0;
  max-width: 700px;
  margin: auto;
}

.googlemap iframe {
  left:0;
  top:0;
  height:100%;
  width:100%;
  position:absolute;
}

.youtube {
  max-width: 700px;
  margin: auto;
}

.responsivecontainer {
  position: relative; 
  padding-bottom: 56.25%; 
  padding-top: 30px; 
  height: 0; 
  overflow: hidden;
}

.responsivecontainer iframe, .responsivecontainer object, .responsivecontainer embed { 
  position: absolute; 
  top: 0; 
  left: 0; 
  width: 100%; 
  height: 100%;
}

.clickhere {
  font-style: italic;
  font-size: 0.7em;
  text-align: right;
  padding-right: 1%;
}

.voxpop {
  max-width: 700px;
  margin: auto;
}

.voxgrid {
  display: grid;
  grid-template-columns: 25% 25% 25% 25%;
  grid-gap: 5px;
}

.person {
  border-radius: 5px;
  box-shadow: 2px 3px 3px lightslategrey;
  overflow: hidden;
}

.person audio {
  width: 100%;
}

.headshot {
  position: relative;
  text-align: center;

}

.infographic {
  max-width: 700px;
  padding-left: 0.25em;
  padding-right: 0.25em;
  margin: auto;
}

.interactive_lede {
  max-width: 640px;
  min-height: 100vh;
  margin-left: auto;
  padding: 1%;
  margin-bottom: 0;
  color: white;
  background: rgba(0, 0, 0, 0.7);
  z-index: 1;
}
.interactive_lede p {
  font-size: 1.5em;
  margin-bottom: 1em;
}
.interactive_hidden {
  display: none;
}
.interactive_skip {
  text-decoration: underline;
  cursor: pointer;
}
#madlib {
  font-style: italic;
}

footer {
  background-color: #9b4741;
  color: white;
  padding: 1%;
  text-align: right;
}



/*media query for responsive design */
@media only screen and (max-width: 1000px) {
  .photogrid {
    display: grid;
    grid-template-columns: auto auto;
    grid-gap: 0.5em;
  }
}

@media only screen and (max-width: 800px) {
  .interactive_lede {
    width: 100%;
  }
  .interactive_lede p {
    font-size: 1.25em;
  }
  .pullquote {
    display: none;
  }

  .photogrid {
    display: grid;
    grid-template-columns: auto;
    grid-gap: 0em;
  }

  .gridpic {
    margin-left: calc(calc(100% - 540px) / 2);
  }

}

@media only screen and (max-width:540px) {
  .gridpic {
    margin-left: unset;
  }  
}


@media only screen and (max-width: 640px) {

  .title1 {
    top: 1%;
  }

  .title1 h1 {
    font-size: 3em;
  }

  .title1 h2 {
    font-size: 1.5em;
  }

  .title1 h3 {
    font-size: 0.9em;
  }

  .maintext {
    font-size: 1.4em;
    line-height: 1.6em;
    text-align: left;
    margin: 0px 20px;
  }

  .voxgrid {
    grid-template-columns: 50% 50%;
  }

  .person audio {
    background-color: black;  
  }

  .interactive_chart {
    visibility: hidden;
    height: 0;
  }

}

